# L-PR

./: README.md  cal_chamfer.py  dataset.py
lidar-sfm/: detect_aruco.py  main.py
lidar-sfm/iilfm/: CMakeLists.txt  detect_apriltag.py  detect_aruco.py  main.cpp
lpr/: detect_apriltag.py  main.py
lpr/iilfm/: readme.txt  this.txt
merge/: CMakeLists.txt  Makefile  main.cpp  process.py
yoho_my/: events.out.tfevents.1722050747.kyber-Z370-G  model.pth  model_best.pth  train.txt  val.txt
